# fp-admin

./: .flake8  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  main.py  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml
docs/: README.md  fields.md  index.md  requirements.txt
docs/advanced/: custom-fields.md  error-handling.md  update-endpoints.md
docs/api/: apps.md  models.md  views.md
docs/getting-started/: core-concepts.md  installation.md  quick-start.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/user-guide/: admin-models.md  authentication.md  cli-commands.md  field-types.md  widgets.md
examples/blog_project/: README.md  app.py  settings.py
fp_admin/: __init__.py  app.py  constants.py  exceptions.py  global_settings.py  main.py  manage.py  settings.py  settings_loader.py
fp_admin/admin/: __init__.py
fp_admin/api/: __init__.py  error_handlers.py
fp_admin/cli/: __init__.py  app_cli.py  main.py
fp_admin/core/: __init__.py  database.py  db.py  loader.py
fp_admin/providers/: __init__.py  exceptions.py  internal.py
fp_admin/registry/: __init__.py  _app_registry.py  _base.py  _model_registry.py  _view_registry.py  admin_model_config.py
fp_admin/schemas/: __init__.py  base.py
fp_admin/services/: __init__.py  base.py  create_service.py  form_validator.py  model_service.py  models_service.py  query_builder.py  read_service.py  update_service.py  utils.py
fp_admin/utils/: error_serialization.py  (+1 more)
tests/: conftest.py  test_markers.py
(+130 files in other folders)
